# codegenpt

./: .gitignore  README.md  pyproject.toml
codegenpt/: cli.py  codegenpt_directory.py  codegenpt_file.py  codegenpt_instructions.py  dependency_batch-old copy.py  dependency_batch.py  dependency_batch.py.codegenpt
codegenpt/commands/: command.py  commands.py  include.py
codegenpt/filesystem/: file_discovery.py
codegenpt/generators/: directory_generator.py  file_generator.py
codegenpt/llm/: llm.py
tests/codegenpt/: test_cli.py  test_codegenpt_directory.py  test_codegenpt_file.py
tests/codegenpt/commands/: test_command.py  test_command.py.codegenpt  test_commands.py  test_commands.py.codegenpt  test_include.py  test_include.py.codegenpt
tests/codegenpt/filesystem/: test_file_discovery.py
tests/test_files/: jokes.txt  python_program.dir.codegenpt  test.py.codegenpt  test.txt.codegenpt
