[tool.poetry]
name = "codegenpt"
version = "0.8.1"
description = "Autogenerate files and folders using ChatGPT API"
authors = ["Diego Quinteiro <diegoquinteiro@gmail.com>"]
license = "MIT"
readme = "README.md"

[project.urls]
homepage = "https://github.com/diegoquinteiro/codegenpt"
source = "https://github.com/diegoquinteiro/codegenpt"

[tool.poetry.dependencies]
python = ">=3.10"
openai = "^0.27.8"
pytest = "^7.3.2"
click = "^8.1.3"
demjson3 = "^3.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codegenpt = "codegenpt.cli:cli"